--- a/index.html
+++ b/index.html
@@ -1,13 +1,138 @@
-<html>
-<head> 
-<style>
-body{background-color:red;}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>致青春</title>
+<style type="text/css">
+.one {
+	background-color: #000;
+	height: 30px;
+	width: 1000px;
+	color:#FFF;
+	margin-left: 300px;
+}
+.topone {
+	background-color: #FF0;
+	height: 3px;
+	width: 1000px;
+	margin-top: 10px;
+}
+.three .centertwo p spantwo {
+	color: #FC6;
+}
+.centerone p span {
+	color: #FC3;
+}
+.three {
+	height: 700px;
+	width: 998px;
+	border: 1px solid #000;
+	margin-left: 300px;
+}
+body {
+	background-color: #660;
+}
+.three .centerone p spanone {
+	color: #33F;
+}
+.centerone {
+	float: left;
+	height: 700px;
+	width: 400px;
+	border-right-width: 1px;
+	 
+	border-right-style: solid;
+	border-bottom-style: solid;
+	border-left-style: solid;
+	 
+	border-right-color: #000;
+	border-bottom-color: #FFF;
+	border-left-color: #FFF;
+}
+.three .four .five {
+	font-family: "隶书";
+	font-size: 10px;
+	height: 12px;
+	width: 100px;
+}
+.centertwo {
+	float: left;
+	height: 700px;
+	width: 400px;
+	border-right-width: 1px;
+	border-right-style: solid;
+	border-right-color: #333;
+}
+.centerone p {
+	text-indent: 3em;
+	font-size: 15px;
+	color: #0FF;
+	margin-left:10px;
+	letter-spacing:2px;
+	line-height: 20px;
+	font-weight: bold;
+}
+.centertwo p {
+	text-indent: 3em;
+	font-size: 15px;
+	color:#63C;
+	margin-left:10px;
+	letter-spacing:2px;
+	line-height: 20px;
+	font-weight: bold;
+}
+.four {
+	float: left;
+	height: 700px;
+	width: 190px;
+	font-family: "隶书";
+	color: #606;
+	background-color: #CCC;
+}
+.three .four table {
+	font-family: "华文琥珀";
+	font-size: 50px;
+	color: #6F9;
+	margin-top: 100px;
+}
+.three .four .five {
+	font-family: "华文琥珀";
+	font-size: 16px;
+	background-color: #636;
+}
 </style>
 </head>
-<body>
- <h1>我见过春日，夏风，秋叶，冬雪；
- 也踏遍南水，北山，东麓，西岭；
- 可这四季春秋 苍山泱水，都不及你 冲我展眉一笑。</h1>
 
+<body>
+<div class="one">导航>我的主页
+  <div class="topone"></div>
+</div>
+<div class="three">
+  <div class="centerone"><h1>日记</h1>
+   <p> <i>我的记忆</i>一定是失去他的作用了，记不得任何一丁点的岁月的蛛丝马迹，我也是很疲惫的，不愿意去想那些还未发生的事情，我的瞳孔放大，在深夜里，我独自哀叹，这是午夜，这是在疲乏极至的无星星的世界。</p>
+<p>我可能有些伤心，<span>这段时间我丢失了不少东西</span>，可能和我想要追求的梦想有关，求而不得，也怪不得他人，我熟悉宿舍到教室这一路走来的空洞说话，有时不是特别的合群，孤僻让我感到压力，我甚至有过自暴自弃的冲动，但是我总还是抑制住了，我的计划几乎没有成功的时候，这些计划里包含的梦想，已经如那些金子般的岁月，匆匆逝去了，我害怕的却不是这些金子般的岁月的流逝，<spanone>我害怕的只是那些物质，</spanone>>我为什么害怕物质呢，可能那些是撑起我生活一切的东西吧，我也不知何时物质了起来，以至于杯觥交错间，我也成为了一个俗气至顶的人。他或许影响了我，葬送我所爱的一切。
+
+</p>
+<p>我丢失了一个玻璃水瓶，在一个下着大雨的深夜，我是恐慌至极的，因为那是支撑我们宿舍喝水的希望，在一个傍晚，我匆匆从床上下来，寻找那一个用的快生了铜锈的杯子，我是孤僻着寻求希望的人，终于，还是没有找到一丝丝水的足迹，我身体水海已经干枯，他干裂着地方，成为坟墓。</p>
+   </div>
+  <div class="centertwo"><p>我走在学校的小路上，困乏导致我遗失了一枚小小的戒指，那枚戒指本来是一位好友的，他在拼了命追求一位女士，在我印象中，我是从未见过这位女士的，我只能想象，可能像天上的星星一般的纯正的光芒的尾翼的样子吧，闪烁，但确实没有实际意义，可能看的久了，我会想起一位科学家叔叔在他某篇论文里写的，"星星，陨石一般的硕大，坠落下来可能与空气摩擦，产生激烈的火花，灼烧平原，祸害无穷。"我的这位朋友也看过这位先生写过的论文，他是极为困惑的，甚至有些反感，他不太喜欢星星，他喜欢浩瀚无垠的星空，对于他来说，他的生命里需要的东西，一颗星星是满足不了他的，我有时候在想他这样的伟大，为何连遗失的一枚戒指都找不到呢。</p>
+  
+  <p><spantwo>春季即将过去，迎来夏季确实孤孤单单的，甚至有些闷热，我找不到这种夏季的感觉的时候，就去睡觉，在学校里我养成了上课打瞌睡的习惯，于是有一天，我醒来的时候，发现我压坏了衣服眼镜，我是很痛苦的，失去了那么多东西，我缺失物质之中的无数东西，慢慢的变得不细心，变得麻木，我可能习惯了这种生活，痛苦已经把我所有的一切葬送了，我以为我还是少年，但的确我已经什么都没有了，岁月可能会抚平我所有的伤口，但记忆永远的被他割伤，情感是这样的，失去的东西也是这样的，我能做的，仅仅是悲泣，叹息和惆怅。</spantwo></p>
+  </div>
+  <div class="four">  <table width="190" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td>致</td>
+  </tr>
+  <tr>
+    <td>青</td>
+  </tr>
+  <tr>
+    <td>春</td>
+  </tr>
+</table>
+    <div class="five">纪念这个夏季</div>
+  </div>
+  
+</div>
 </body>
 </html>
